--- a/index.html
+++ b/index.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html><!--  This site was created in Webflow. https://webflow.com  --><!--  Last Published: Mon Jul 29 2024 02:25:19 GMT+0000 (Coordinated Universal Time)  -->
-<html data-wf-page="66a62859c2048d9ffe09ddd0" data-wf-site="66a62859c2048d9ffe09ddca">
+<html>
 <head>
   <meta charset="utf-8">
   <meta name="google-adsense-account" content="ca-pub-8625633460474476">
